--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Relationship Navigator</title>
+    <title>오픈소스SW 데이팅앱</title>
     <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
     <div class="app-shell">
       <header class="topbar">
-        <div class="brand">Smart Relationship Navigator</div>
+        <div class="brand">오픈소스SW 데이팅앱</div>
         <nav class="nav-links">
           <button type="button" data-view="map" class="nav-btn active">지도</button>
           <button type="button" data-view="planner" class="nav-btn">플래너</button>
