챌린지 기능 개발 수정(gps기반)/ ver1.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,6 +14,7 @@
           <button type="button" data-view="map" class="nav-btn active">지도</button>
           <button type="button" data-view="planner" class="nav-btn">플래너</button>
           <button type="button" data-view="couple" class="nav-btn">커플</button>
+          <button type="button" data-view="challenges" class="nav-btn">챌린지</button>
           <button type="button" data-view="reports" class="nav-btn">리포트</button>
         </nav>
         <div class="top-actions">
