Revert "Develop challenge error (#58)"
This reverts commit 2243cad6015dc1cf142ff61879630d38f2ef291d.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,7 @@
         <div class="top-actions">
           <span id="user-label" class="user-label">로그인 필요</span>
           <button id="logout-btn" class="ghost-btn hidden">로그아웃</button>
-          <button id="settings-btn" class="ghost-btn">⚙️ 설정</button>
+          <button id="toggle-right" class="ghost-btn">패널 닫기</button>
         </div>
       </header>
 
